--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,10 @@
         "@testing-library/user-event": "^7.2.1",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
+        "react-audio-spectrum": "^0.1.0",
         "react-dom": "^16.13.1",
-        "react-router-dom": "^5.2.0",
         "react-draggable": "^4.2.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1"
     },
     "scripts": {
