--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "http-errors": "^1.7.3",
-    "jimp": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.16"
+    "mongoose": "^5.9.16",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
