--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "filepond-plugin-image-exif-orientation": "^1.0.9",
         "filepond-plugin-image-preview": "^4.6.4",
         "filepond-plugin-image-resize": "^2.0.7",
+        "js-cookie": "^2.2.1",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
         "react-audio-spectrum": "^0.1.0",
