--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "country-flag-icons": "^1.2.1",
         "filepond": "^4.17.1",
         "filepond-plugin-file-encode": "^2.1.6",
         "filepond-plugin-image-exif-orientation": "^1.0.9",
@@ -19,6 +20,7 @@
         "react-dom": "^16.13.1",
         "react-draggable": "^4.2.0",
         "react-filepond": "^7.0.1",
+        "react-flags-select": "^1.1.12",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
         "react-wavesurfer": "^0.8.6",
