--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,8 @@
 client/node_modules
 client/package-lock.json
 client/.env
-client/src/App.js
-client/src/Routes.js
-client/src/components/TextParticles.jsx
-client/src/components/SingleProject.jsx
-client/src/components/AudioRoom.jsx
-client/src/components/TrackUpload.jsx
-client/src/components/ProfileImg.jsx
-client/src/components/Navbar.jsx
-client/src/js/textParticles.js
-client/src/js/titleCanvas.js
+client/src/private
+client/src/components/private
+client/js/private
+
+
