--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "mongoose": "^5.9.16",
         "multer": "^1.4.2",
         "nodemailer": "^6.4.10"
+    },
+    "engines": {
+        "node": "v12.6.0"
     }
 }
