--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.5.0",
+        "heroku": "^7.42.1",
         "http-errors": "^1.7.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.16",
